--- a/index.html
+++ b/index.html
@@ -4,5 +4,5 @@ title: Jacob Rosen
 ---
 <div class="blurb">
 	<h1>Jacob Rosen</h1>
-	<p>I'm best known as the horrible cop from <em>A Touch of Evil</em> Don't trust me. <a href="/about">About me</a></p>
+	//<p>I'm best known as the horrible cop from <em>A Touch of Evil</em> Don't trust me. <a href="/about">About me</a></p>
 </div><!-- /.blurb -->
